por favor funciona

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button onclick="validateNumber()">Validar</button>
     <p id="result"></p>
   </div>
-<script type="module" src="script.js"></script>
+  <script type="module" src="logic.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
